--- a/vmi.html
+++ b/vmi.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Próba oldal</h1>
-    <p>Ez egy próba oldal a 9.d IKT projekt órájához.</p>
+    <p>Ez egy olyan próba oldal, amit a 9.d IKT projekt órájához készítettünk.</p>
+    <p>Minden oldalra kell egy tigris.</p>
 </body>
 </html>
